[package]
name = "steelsafe"
version = "0.1.0"
edition = "2021"
authors = ["H2CO3 <arpad.goretity@gmail.com>"]
categories = ["authentication", "command-line-utilities", "cryptography"]
keywords = ["password", "password-manager", "security", "cryptography", "crypto"]

[dependencies]
thiserror = "1.0.63"
directories = "5.0.1"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
nanosql = { version = "0.7.0", features = ["chrono"] }
ratatui = "0.28.0"
