[package]
name = "steelsafe"
version = "0.1.0"
edition = "2021"
authors = ["H2CO3 <arpad.goretity@gmail.com>"]
categories = ["authentication", "command-line-utilities", "cryptography"]
keywords = ["password", "password-manager", "security", "cryptography", "crypto"]

[dependencies]
thiserror = "1.0.63"
serde_json = "1.0.127"
directories = "5.0.1"
rand = "0.8.5"
zeroize = "1.8.1"
block-padding = "0.3.3"
crypto-common = { version = "0.1.6", features = ["std"] }
argon2 = { version = "0.5.3", features = ["zeroize", "std"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
nanosql = { version = "0.9.1", features = ["chrono"] }
ratatui = "0.28.1"
tui-textarea = "0.6.1"
